spacing fix

--- a/less/content.less
+++ b/less/content.less
@@ -141,7 +141,7 @@
     font-size: @font-size-small;
 
     margin-bottom: @event-spacing;
-    margin-top: @event-spacing;
+    margin-top: @event-spacing + 3;
     background-color: #f7f7f7;
 
     padding: @event-spacing/2 @gutter-width;
