--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -173,7 +173,7 @@ address {
   border-top: 1px solid #dddddd;
   font-size: 14px;
   margin-bottom: 12px;
-  margin-top: 12px;
+  margin-top: 15px;
   background-color: #f7f7f7;
   padding: 6px 12px;
 }
